--- a/src/sass/common/_icons.scss
+++ b/src/sass/common/_icons.scss
@@ -150,3 +150,12 @@
 .icon-behance:before {
   content: "\e951";
 }
+.icon-heart:before {
+  content: "\e9da";
+}
+.icon-tongue:before {
+  content: "\e9e3";
+}
+.icon-cool:before {
+  content: "\e9eb";
+}
