--- a/src/sass/components/comments/_comments.scss
+++ b/src/sass/components/comments/_comments.scss
@@ -16,24 +16,88 @@
 	min-height: 100px !important;
 }
 
+#isso-comments {
+  padding: 32px;
+}
+
 ul.comment-block {
   list-style-type:none;
-}
+  padding: 0;
+  margin: 0;
 
-.comment-placeholder {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: flex-start;
-}
+  li {
+    margin-bottom: 16px;
+  }
 
-.comment-avatar {
-  min-width: 64px;
-  min-height: 64px;
-}
+  .inline-reply {
+    margin-top: 20px;
+  }
 
-.comment-stack {
-  display: flex;
-  flex-direction: column;
-  flex-grow: 1;
+  .comment-placeholder {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: stretch;
+  }
+  
+  .comment-avatar {
+    min-width: 64px;
+    min-height: 64px;
+    padding-top: 4px;
+
+    img {
+      padding: 0;
+      margin: 0;
+    }
+  }
+  
+  .comment-stack {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    margin-left: 16px;
+  
+    .comment-status {
+      font-size: 12px;
+  
+      .comment-author {
+        font-weight: bold;
+      }
+  
+      .comment-modified {
+        margin-left: 8px;
+      }
+    }
+  
+    .comment-content {
+      padding: 0;
+      margin: 0;
+  
+      p {
+        margin: 0;
+        padding: 0;
+        line-height: 1em;
+      }
+    }
+  
+    .comment-toolbar {
+      margin-top: 16px;
+      font-size: 12px;
+      padding-bottom: 16px;
+      border-bottom: 1px solid lightgray;
+
+      a {
+        text-decoration: none;
+      }
+
+      .comment-likes, .comment-dislikes {
+        margin-left: 8px;
+        margin-right: 16px;
+      }
+
+      .comment-action {
+        font-weight: bold;
+      }
+    }
+  }
 }
